force-app/main/default/objects/DataCloudPartition__c/DataCloudPartition__c.object-meta.xml
<CustomObject>
    <label>Data Cloud Partition</label>
    <pluralLabel>Data Cloud Partitions</pluralLabel>
    <nameField>
        <label>Partition Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>