force-app/main/default/objects/DataCloudPartition__c/fields/CurrentOffset__c.field-meta.xml
<CustomField>
    <fullName>CurrentOffset__c</fullName>
    <label>Current Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>