force-app/main/default/objects/DataCloudPartition__c/fields/PartitionId__c.field-meta.xml
<CustomField>
    <fullName>PartitionId__c</fullName>
    <label>Partition ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>