force-app/main/default/objects/DataCloudPartition__c/fields/TotalBulkAPICalls__c.field-meta.xml
<CustomField>
    <fullName>TotalBulkAPICalls__c</fullName>
    <label>Total Bulk API Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>