force-app/main/default/objects/DataCloudPartition__c/fields/TotalProcessed__c.field-meta.xml
<CustomField>
    <fullName>TotalProcessed__c</fullName>
    <label>Total Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>